# key-control-server

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt  server.py
src/key_control_server/: config.yaml  globals.py  main.py  server.py
src/key_control_server/templates/: controls.html
tests/: test_unit.py
